2010-03-01  Lin Ma  <Lin.Ma@Sun.COM>

	* data/nwam-manager-properties: Fixed a nit since network-admin
	is moved to /usr/bin

2010-02-26  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c (main):
	* capplet/nwam_pref_dialog.c (nwam_capplet_dialog_init),
	(response_cb), (nwam_capplet_dialog_select_tab):
	* capplet/nwam_pref_dialog.h: Fixed 9522 [gnome2.26] connection
	profile launches network preferences showing incorrect combo box
	* capplet/nwam_profile_dialog.c (help):
	* capplet/nwam_profile_panel.c (help):
	* common/help_refs.h: Fixed 14630 [nwam-133] incorrect help page
	launches in network profile view
	* configure.in: Bump to 1.0.0
	* daemon/status_icon.c (daemon_wifi_selection_needed): Fixed
	14549 [nwam-133] if no favorites available, do nothing - launches
	wireless network chooser
	* data/nwam-manager-properties:
	* data/nwam-network.desktop.in: Fixed 14886 [nwam-133] determine
	correct action from network locations menu item
	* nwam_core/lib/i386/libnwam.so.1:
	* nwam_core/lib/sparc/libnwam.so.1:
	* nwam_core/usr/include/sys/mac.h: Sync to nwam1_134.final-nd.

2010-02-12  Calum Benson  <Calum.Benson@Sun.COM>

	* common/nwamui_prof.c: (nwamui_prof_get_no_fav_action_string):
	Change wording of dropdown list item to match UI spec.

2010-02-12  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/Makefile.am:
	* data/Makefile.am:
	* data/nwam-manager-properties:
	* data/nwam-manager-properties.desktop.in:
	* data/nwam-network.desktop.in: Fixed 14234 [132] two 'Network
	Locations' window can be opened.
	* help/C/graphics/connection-properties-ipv4.png:
	* help/C/graphics/connection-properties-wireless.png:
	* help/C/graphics/connection-status.png:
	* help/C/graphics/locationprefs-dialog.png:
	* help/C/graphics/network-profile-view.png:
	* help/C/graphics/nwprofile-auto.png:
	* help/C/graphics/nwprofile-user.png:
	* help/C/graphics/nwstatus-context-menu.png:
	* help/C/graphics/vpn-dialog.png:
	* help/C/graphics/wireless-chooser-dlg.png:
	* help/C/graphics/wireless-chooser.png: