@@ -4,18 +4,18 @@
    <!ENTITY appversion "1.0"> 
    <!ENTITY manrevision "1.0"> 
    <!ENTITY date "September 2009"> 
-   <!ENTITY app "<application>OpenSolaris Network Auto-Magic Configuration</application>"> 
+   <!ENTITY app "<application>OpenSolaris Network Auto-Magic Online Help</application>"> 
    <!ENTITY appname "nwam-manager"> 
 ]>
-<book id="osnetautomagoh" label="fcs" lang="en"><title>OpenSolaris Network Auto-Magic Configuration</title>
-<bookinfo><authorgroup><author><firstname>Solaris</firstname>
+<book id="osnetautomagoh" label="fcs" lang="en"><title>OpenSolaris Network Auto-Magic Online Help</title>
+<bookinfo><authorgroup><author><firstname>Oracle Solaris</firstname>
 <surname>Publications</surname>
 </author>
 </authorgroup>
 <pubsnumber>820-7604-10</pubsnumber>
 <releaseinfo></releaseinfo>
 <pubdate>March 2010</pubdate>
-<publisher role="maintainer"><publishername>Sun Microsystems, Inc.</publishername>
+<publisher role="maintainer"><publishername>Oracle Corporation</publishername>
 </publisher>
 <revhistory>
   <revision>
@@ -34,22 +34,16 @@
 </abstract>
 <copyright><year>2010</year>
 </copyright>
-<legalnotice><para>Sun Microsystems, Inc. has intellectual property rights relating to technology embodied in the product that is described in this document. In particular, and without limitation, these intellectual property rights may include one or more U.S. patents or pending patent applications in the U.S. and in other countries.</para>
-<para>U.S. Government Rights &#8211; Commercial software. Government users are subject to the Sun Microsystems, Inc. standard license agreement and applicable provisions of the FAR and its supplements.</para>
-<para>This distribution may include materials developed by third parties.</para>
-<para>Parts of the product may be derived from Berkeley BSD systems, licensed from the University of California. UNIX is a registered trademark in the U.S. and other countries, exclusively licensed through X/Open Company, Ltd.</para>
-<para>Sun, Sun Microsystems, the Sun logo, the Solaris logo, the Java Coffee Cup logo, docs.sun.com,  Java, OpenSolaris, and Solaris are trademarks or registered trademarks of Sun Microsystems, Inc. or its subsidiaries in the U.S. and other countries. All SPARC trademarks are used under license and are trademarks or registered trademarks of SPARC International, Inc. in the U.S. and other countries. Products bearing SPARC trademarks are based upon an architecture developed by Sun Microsystems, Inc.  PostScript is a trademark or registered trademark of Adobe Systems, Incorporated, which may be registered in certain jurisdictions.</para>
-<para>The OPEN LOOK and <trademark>Sun</trademark> Graphical User Interface was developed by Sun Microsystems, Inc. for its users and licensees. Sun acknowledges the pioneering efforts of Xerox in researching and developing the concept of visual or graphical user interfaces for the computer industry. Sun holds a non-exclusive license from Xerox to the Xerox Graphical User Interface, which license also covers Sun's licensees who implement OPEN LOOK GUIs and otherwise comply with Sun's written license agreements.</para>
-<para>Products covered by and information contained in this publication are controlled by U.S. Export Control laws and may be subject to the export or import laws in other countries. Nuclear, missile, chemical or biological weapons or nuclear maritime end uses or end users, whether direct or indirect, are strictly prohibited. Export or reexport to countries subject to U.S. embargo or to entities identified on U.S. export exclusion lists, including, but not limited to, the denied persons and specially designated nationals lists is strictly prohibited.</para>
-<para>DOCUMENTATION IS PROVIDED &#8220;AS IS&#8221; AND ALL EXPRESS OR IMPLIED CONDITIONS, REPRESENTATIONS AND WARRANTIES, INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE OR NON-INFRINGEMENT, ARE DISCLAIMED, EXCEPT TO THE EXTENT THAT SUCH DISCLAIMERS ARE HELD TO BE LEGALLY INVALID.</para>
-<para lang="fr"></para>
-<para>Sun Microsystems, Inc. d&#233;tient les droits de propri&#233;t&#233; intellectuelle relatifs &#224; la technologie incorpor&#233;e dans le produit qui est d&#233;crit dans ce document. En particulier, et ce sans limitation, ces droits de propri&#233;t&#233; intellectuelle peuvent inclure un ou plusieurs brevets am&#233;ricains ou des applications de brevet en attente aux Etats-Unis et dans d'autres pays.</para>
-<para>Cette distribution peut comprendre des composants d&#233;velopp&#233;s par des tierces personnes.</para>
-<para>Certaines composants de ce produit peuvent &#234;tre d&#233;riv&#233;es du logiciel Berkeley BSD, licenci&#233;s par l'Universit&#233; de Californie. UNIX est une marque d&#233;pos&#233;e aux Etats-Unis et dans d'autres pays; elle est licenci&#233;e exclusivement par X/Open Company, Ltd. </para>
-<para>Sun, Sun Microsystems, le logo Sun, le logo Solaris, le logo Java Coffee Cup, docs.sun.com,  Java, OpenSolaris, et Solaris sont des marques de fabrique ou des marques d&#233;pos&#233;es de Sun Microsystems, Inc., ou ses filiales, aux Etats-Unis et dans d'autres pays. Toutes les marques SPARC sont utilis&#233;es sous licence et sont des marques de fabrique ou des marques d&#233;pos&#233;es de SPARC International, Inc. aux Etats-Unis et dans d'autres pays. Les produits portant les marques SPARC sont bas&#233;s sur une architecture d&#233;velopp&#233;e par Sun Microsystems, Inc.  PostScript est une marque de fabrique d'Adobe Systems, Incorporated, laquelle pourrait ?`tre d?pos?e dans certaines juridictions.</para>
-<para>L'interface d'utilisation graphique OPEN LOOK et Sun a &#233;t&#233; d&#233;velopp&#233;e par Sun Microsystems, Inc. pour ses utilisateurs et licenci&#233;s. Sun reconna&#238;t les efforts de pionniers de Xerox pour la recherche et le d&#233;veloppement du concept des interfaces d'utilisation visuelle ou graphique pour l'industrie de l'informatique. Sun d&#233;tient une licence non exclusive de Xerox sur l'interface d'utilisation graphique Xerox, cette licence couvrant &#233;galement les licenci&#233;s de Sun qui mettent en place l'interface d'utilisation graphique OPEN LOOK et qui, en outre, se conforment aux licences &#233;crites de Sun.</para>
-<para>Les produits qui font l'objet de cette publication et les informations qu'il contient sont r&#233;gis par la legislation am&#233;ricaine en mati&#232;re de contr&#244;le des exportations et peuvent &#234;tre soumis au droit d'autres pays dans le domaine des exportations et importations. Les utilisations finales, ou utilisateurs finaux, pour des armes nucl&#233;aires, des missiles, des armes chimiques ou biologiques ou pour le nucl&#233;aire maritime, directement ou indirectement, sont strictement interdites. Les exportations ou r&#233;exportations vers des pays sous embargo des Etats-Unis, ou vers des entit&#233;s figurant sur les listes d'exclusion d'exportation am&#233;ricaines, y compris, mais de mani&#232;re non exclusive, la liste de personnes qui font objet d'un ordre de ne pas participer, d'une fa&#231;on directe ou indirecte, aux exportations des produits ou des services qui sont r&#233;gis par la legislation am&#233;ricaine en mati&#232;re de contr&#244;le des exportations et la liste de ressortissants sp&#233;cifiquement design&#233;s, sont rigoureusement interdites.</para>
-<para>LA DOCUMENTATION EST FOURNIE "EN L'ETAT" ET TOUTES AUTRES CONDITIONS, DECLARATIONS ET GARANTIES EXPRESSES OU TACITES SONT FORMELLEMENT EXCLUES, DANS LA MESURE AUTORISEE PAR LA LOI APPLICABLE, Y COMPRIS NOTAMMENT TOUTE GARANTIE IMPLICITE RELATIVE A LA QUALITE MARCHANDE, A L'APTITUDE A UNE UTILISATION PARTICULIERE OU A L'ABSENCE DE CONTREFACON. </para>
+<abstract><para>This online help provides detailed instructions for using the NWAM GUI to monitor network connectivity and to configure wired and wireless network connections.</para>
+</abstract>
+<legalnotice><para>This software and related documentation are provided under a license agreement containing restrictions on use and disclosure and are protected by intellectual property laws. Except as expressly permitted in your license agreement or allowed by law, you may not use, copy, reproduce, translate, broadcast, modify, license, transmit, distribute, exhibit, perform, publish, or display any part, in any form, or by any means. Reverse engineering, disassembly, or decompilation of this software, unless required by law for interoperability, is prohibited.</para>
+<para>The information contained herein is subject to change without notice and is not warranted to be error-free. If you find any errors, please report them to us in writing.</para>
+<para>If this is software or related software documentation that is delivered to the U.S. Government or anyone licensing it on behalf of the U.S. Government, the following notice is applicable:</para>
+<para>U.S. GOVERNMENT RIGHTS Programs, software, databases, and related documentation and technical data delivered to U.S. Government customers are &#8220;commercial computer software&#8221; or &#8220;commercial technical data&#8221; pursuant to the applicable Federal Acquisition Regulation and agency-specific supplemental regulations. As such, the use, duplication, disclosure, modification, and adaptation shall be subject to the restrictions and license terms set forth in the applicable Government contract, and, to the extent applicable by the terms of the Government contract, the additional rights set forth in FAR 52.227-19, Commercial Computer Software License (December 2007). Oracle USA, Inc., 500 Oracle Parkway, Redwood City, CA 94065.</para>
+<para>This software or hardware is developed for general use in a variety of information management applications. It is not developed or intended for use in any inherently dangerous applications, including applications which may create a risk of personal injury. If you use this software or hardware in dangerous applications, then you shall be responsible to take all appropriate fail-safe, backup, redundancy, and other measures to ensure the safe use. Oracle Corporation and its affiliates disclaim any liability for any damages caused by use of this software or hardware in dangerous applications.</para>
+<para>Oracle is a registered trademark of Oracle Corporation and/or its affiliates. Oracle and Java are registered trademarks of Oracle and/or its affiliates. Other names may be trademarks of their respective owners.</para>
+<para>AMD, Opteron, the AMD logo, and the AMD Opteron logo are trademarks or registered trademarks of Advanced Micro Devices. Intel and Intel Xeon are trademarks or registered trademarks of Intel Corporation. All SPARC trademarks are used under license and are trademarks or registered trademarks of SPARC International, Inc. UNIX is a registered trademark licensed through X/Open Company, Ltd.</para>
+<para>This software or hardware and documentation may provide access to or information on content, products, and services from third parties. Oracle Corporation and its affiliates are not responsible for and expressly disclaim all warranties of any kind with respect to third- party content, products, and services. Oracle Corporation and its affiliates will not be responsible for any loss, costs, or damages incurred due to your access to or use of third- party content, products, or services.</para>
 </legalnotice>
 </bookinfo>
 <chapter id="intro"><title>Introduction</title>
