@@ -1,3 +1,8 @@
+2010-03-08  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* help/C/nwam-manager.xml: Fixed 15032 NWAM OLH files have to
+	update with Oracle branding
+
 2010-03-01  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* data/nwam-manager-properties: Fixed a nit since network-admin
